fix: Prevent ruby text cutoff on first line

--- a/less/forum.less
+++ b/less/forum.less
@@ -1,5 +1,6 @@
 ruby {
     ruby-align: center;
+    line-height: 1;
 
     rt {
         font-size: 0.6em;
